fixed whitespace bug, divs size correctly now. added a scoreboard div. next working on state and conditionals for it

--- a/react-front-end/src/App.scss
+++ b/react-front-end/src/App.scss
@@ -5,10 +5,28 @@ html {
   box-sizing: inherit;
 }
 
+.App {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+}
+
 .map-container {
   width: 100%;
-  height: 45vh;
+  height: 50%;
   display: flex;
   align-items: flex-end;
 }
 
+.scoreboard {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
